[package]
name = "np-domain"
version = "0.1.0"
authors = ["Wei Tang <wei@that.world>"]
license = "GPL-3.0-or-later"
description = "Domain handling for Nomo."
edition = "2018"

[dependencies]
serde = { version = "1.0.101", optional = true }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
sp-core = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "neatcoin" }

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"sp-core/std",
]
