[package]
name = "np-domain"
version = "1.2.1"
authors = ["Wei Tang <wei@that.world>"]
license = "GPL-3.0-or-later"
description = "Domain handling for Nomo."
edition = "2018"

[dependencies]
serde = { version = "1.0.101", optional = true }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
scale-info = { version = "1.0", default-features = false, features = ["derive"] }
primitive-types = { version = "0.10.0", default-features = false }
blake2-rfc = { version = "0.2.18", default-features = false }

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"scale-info/std",
	"primitive-types/std",
	"blake2-rfc/std",
]
