[package]
name = "np-opaque"
version = "1.3.0"
authors = ["Wei Tang <wei@that.world>"]
license = "GPL-3.0-or-later"
edition = "2018"

[dependencies]
sp-core = { path = "../../substrate/primitives/core", default-features = false }
sp-runtime = { path = "../../substrate/primitives/runtime", default-features = false }

[features]
default = ["std"]
std = [
	"sp-core/std",
	"sp-runtime/std",
]
