[package]
name = "neatcoin-runtime-common"
version = "0.1.0"
authors = ["Wei Tang <wei@that.world>"]
edition = "2018"
license = "GPL-3.0-or-later"

[dependencies]
static_assertions = "1.1.0"
smallvec = "1.6.1"

sp-std = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "neatcoin" }
sp-core = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "neatcoin" }
sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "neatcoin" }
sp-consensus-babe = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "neatcoin" }
frame-system = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "neatcoin" }
frame-support = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "neatcoin" }
pallet-transaction-payment = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "neatcoin" }
pallet-authorship = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "neatcoin" }
pallet-balances = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "neatcoin" }
pallet-treasury = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "neatcoin" }

[features]
default = ["std"]
std = [
	"sp-std/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-consensus-babe/std",
	"frame-system/std",
	"frame-support/std",
	"pallet-transaction-payment/std",
	"pallet-authorship/std",
	"pallet-balances/std",
	"pallet-treasury/std",
]
