[package]
name = "neatcoin-runtime"
version = "1.2.0"
authors = ["Wei Tang <wei@that.world>"]
edition = "2018"
license = "GPL-3.0-or-later"

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.101", optional = true, features = ["derive"] }
scale-info = { version = "1.0", default-features = false, features = ["derive"] }
static_assertions = "1.1.0"
log = { version = "0.4.14", default-features = false }
smallvec = "1.6.1"

np-opaque = { default-features = false, path = "../../primitives/opaque" }

frame-system = { default-features = false, git = "https://github.com/paritytech/substrate" }
frame-system-rpc-runtime-api = { default-features = false, git = "https://github.com/paritytech/substrate" }
frame-executive = { default-features = false, git = "https://github.com/paritytech/substrate" }
frame-support = { default-features = false, git = "https://github.com/paritytech/substrate" }
frame-election-provider-support = { default-features = false, git = "https://github.com/paritytech/substrate" }

pallet-balances = { default-features = false, git = "https://github.com/paritytech/substrate" }
pallet-grandpa = { default-features = false, git = "https://github.com/paritytech/substrate" }
pallet-randomness-collective-flip = { default-features = false, git = "https://github.com/paritytech/substrate" }
pallet-timestamp = { default-features = false, git = "https://github.com/paritytech/substrate" }
pallet-elections-phragmen = { default-features = false, git = "https://github.com/paritytech/substrate" }
pallet-transaction-payment = { default-features = false, git = "https://github.com/paritytech/substrate" }
pallet-transaction-payment-rpc-runtime-api = { default-features = false, git = "https://github.com/paritytech/substrate" }
pallet-collective = { default-features = false, git = "https://github.com/paritytech/substrate" }
pallet-election-provider-multi-phase = { default-features = false, git = "https://github.com/paritytech/substrate" }
pallet-staking = { default-features = false, git = "https://github.com/paritytech/substrate" }
pallet-staking-reward-curve = { git = "https://github.com/paritytech/substrate" }
pallet-babe = { default-features = false, git = "https://github.com/paritytech/substrate" }
pallet-im-online = { default-features = false, git = "https://github.com/paritytech/substrate" }
pallet-multisig = { default-features = false, git = "https://github.com/paritytech/substrate" }
pallet-bounties = { default-features = false, git = "https://github.com/paritytech/substrate" }
pallet-proxy = { default-features = false, git = "https://github.com/paritytech/substrate" }
pallet-identity = { default-features = false, git = "https://github.com/paritytech/substrate" }
pallet-tips = { default-features = false, git = "https://github.com/paritytech/substrate" }
pallet-utility = { default-features = false, git = "https://github.com/paritytech/substrate" }
pallet-vesting = { default-features = false, git = "https://github.com/paritytech/substrate" }
pallet-treasury = { default-features = false, git = "https://github.com/paritytech/substrate" }
pallet-membership = { default-features = false, git = "https://github.com/paritytech/substrate" }
pallet-democracy = { default-features = false, git = "https://github.com/paritytech/substrate" }
pallet-offences = { default-features = false, git = "https://github.com/paritytech/substrate" }
pallet-offences-benchmarking = { git = "https://github.com/paritytech/substrate", default-features = false, optional = true }
pallet-session = { default-features = false, git = "https://github.com/paritytech/substrate" }
pallet-session-benchmarking = { git = "https://github.com/paritytech/substrate", default-features = false, optional = true }
pallet-indices = { default-features = false, git = "https://github.com/paritytech/substrate" }
pallet-scheduler = { default-features = false, git = "https://github.com/paritytech/substrate" }
pallet-authorship = { default-features = false, git = "https://github.com/paritytech/substrate" }
pallet-authority-discovery = { default-features = false, git = "https://github.com/paritytech/substrate" }
pallet-contracts = { default-features = false, git = "https://github.com/paritytech/substrate" }
pallet-atomic-swap = { default-features = false, git = "https://github.com/paritytech/substrate" }
pallet-contracts-rpc-runtime-api = { default-features = false, git = "https://github.com/paritytech/substrate" }
pallet-contracts-primitives = { default-features = false, git = "https://github.com/paritytech/substrate" }
pallet-eons = { path = "../../frame/eons", default-features = false }
pallet-variables = { path = "../../frame/variables", default-features = false }
pallet-registry = { path = "../../frame/registry", default-features = false }
pallet-zone = { path = "../../frame/zone", default-features = false }
pallet-fcfs = { path = "../../frame/fcfs", default-features = false }
pallet-bootstrap = { path = "../../frame/bootstrap", default-features = false }

sp-api = { default-features = false, git = "https://github.com/paritytech/substrate" }
sp-io = { default-features = false, git = "https://github.com/paritytech/substrate" }
sp-block-builder = { git = "https://github.com/paritytech/substrate", default-features = false }
sp-consensus-aura = { default-features = false, git = "https://github.com/paritytech/substrate" }
sp-core = { default-features = false, git = "https://github.com/paritytech/substrate" }
sp-inherents = { git = "https://github.com/paritytech/substrate", default-features = false }
sp-offchain = { default-features = false, git = "https://github.com/paritytech/substrate" }
sp-runtime = { default-features = false, git = "https://github.com/paritytech/substrate" }
sp-session = { default-features = false, git = "https://github.com/paritytech/substrate" }
sp-std = { default-features = false, git = "https://github.com/paritytech/substrate" }
sp-transaction-pool = { default-features = false, git = "https://github.com/paritytech/substrate" }
sp-version = { default-features = false, git = "https://github.com/paritytech/substrate" }
sp-staking = { default-features = false, git = "https://github.com/paritytech/substrate" }
sp-authority-discovery = { default-features = false, git = "https://github.com/paritytech/substrate" }
sp-consensus-babe = { default-features = false, git = "https://github.com/paritytech/substrate" }
sp-npos-elections = { default-features = false, git = "https://github.com/paritytech/substrate" }

# Used for runtime benchmarking
frame-benchmarking = { default-features = false, git = "https://github.com/paritytech/substrate", optional = true }
frame-system-benchmarking = { default-features = false, git = "https://github.com/paritytech/substrate", optional = true }
hex-literal = { version = "0.3.1", optional = true }

frame-try-runtime = { default-features = false, git = "https://github.com/paritytech/substrate", optional = true }

[build-dependencies]
substrate-wasm-builder = { git = "https://github.com/paritytech/substrate" }

[features]
default = ["std"]
std = [
	"codec/std",
	"serde",
	"scale-info/std",
	"log/std",
	"np-opaque/std",
	"frame-system/std",
	"frame-system-rpc-runtime-api/std",
	"frame-executive/std",
	"frame-support/std",
	"frame-election-provider-support/std",
	"pallet-balances/std",
	"pallet-grandpa/std",
	"pallet-randomness-collective-flip/std",
	"pallet-timestamp/std",
	"pallet-elections-phragmen/std",
	"pallet-transaction-payment/std",
	"pallet-transaction-payment-rpc-runtime-api/std",
	"pallet-collective/std",
	"pallet-election-provider-multi-phase/std",
	"pallet-staking/std",
	"pallet-babe/std",
	"pallet-im-online/std",
	"pallet-multisig/std",
	"pallet-bounties/std",
	"pallet-proxy/std",
	"pallet-identity/std",
	"pallet-tips/std",
	"pallet-utility/std",
	"pallet-vesting/std",
	"pallet-treasury/std",
	"pallet-membership/std",
	"pallet-democracy/std",
	"pallet-offences/std",
	"pallet-session/std",
	"pallet-indices/std",
	"pallet-scheduler/std",
	"pallet-authorship/std",
	"pallet-authority-discovery/std",
	"pallet-contracts/std",
	"pallet-atomic-swap/std",
	"pallet-contracts-rpc-runtime-api/std",
	"pallet-contracts-primitives/std",
	"pallet-eons/std",
	"pallet-registry/std",
	"pallet-zone/std",
	"pallet-fcfs/std",
	"pallet-bootstrap/std",
	"sp-api/std",
	"sp-io/std",
	"sp-block-builder/std",
	"sp-consensus-aura/std",
	"sp-core/std",
	"sp-inherents/std",
	"sp-offchain/std",
	"sp-runtime/std",
	"sp-session/std",
	"sp-std/std",
	"sp-transaction-pool/std",
	"sp-version/std",
	"sp-staking/std",
	"sp-authority-discovery/std",
	"sp-consensus-babe/std",
	"sp-npos-elections/std",
	"frame-try-runtime/std",
]
runtime-benchmarks = [
	"frame-benchmarking",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"pallet-election-provider-multi-phase/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
	"pallet-babe/runtime-benchmarks",
	"pallet-balances/runtime-benchmarks",
	"pallet-bounties/runtime-benchmarks",
	"pallet-collective/runtime-benchmarks",
	"pallet-contracts/runtime-benchmarks",
	"pallet-democracy/runtime-benchmarks",
	"pallet-elections-phragmen/runtime-benchmarks",
	"pallet-grandpa/runtime-benchmarks",
	"pallet-identity/runtime-benchmarks",
	"pallet-im-online/runtime-benchmarks",
	"pallet-indices/runtime-benchmarks",
	"pallet-membership/runtime-benchmarks",
	"pallet-multisig/runtime-benchmarks",
	"pallet-proxy/runtime-benchmarks",
	"pallet-scheduler/runtime-benchmarks",
	"pallet-staking/runtime-benchmarks",
	"pallet-timestamp/runtime-benchmarks",
	"pallet-tips/runtime-benchmarks",
	"pallet-treasury/runtime-benchmarks",
	"pallet-utility/runtime-benchmarks",
	"pallet-vesting/runtime-benchmarks",
	"pallet-offences-benchmarking",
	"pallet-session-benchmarking",
	"frame-system-benchmarking",
	"hex-literal",
]
try-runtime = [
	"frame-executive/try-runtime",
	"frame-try-runtime",
	"frame-system/try-runtime",
	"pallet-authority-discovery/try-runtime",
	"pallet-authorship/try-runtime",
	"pallet-babe/try-runtime",
	"pallet-balances/try-runtime",
	"pallet-bounties/try-runtime",
	"pallet-collective/try-runtime",
	"pallet-contracts/try-runtime",
	"pallet-democracy/try-runtime",
	"pallet-elections-phragmen/try-runtime",
	"pallet-grandpa/try-runtime",
	"pallet-im-online/try-runtime",
	"pallet-indices/try-runtime",
	"pallet-membership/try-runtime",
	"pallet-multisig/try-runtime",
	"pallet-identity/try-runtime",
	"pallet-scheduler/try-runtime",
	"pallet-offences/try-runtime",
	"pallet-proxy/try-runtime",
	"pallet-randomness-collective-flip/try-runtime",
	"pallet-session/try-runtime",
	"pallet-staking/try-runtime",
	"pallet-election-provider-multi-phase/try-runtime",
	"pallet-timestamp/try-runtime",
	"pallet-tips/try-runtime",
	"pallet-transaction-payment/try-runtime",
	"pallet-treasury/try-runtime",
	"pallet-utility/try-runtime",
	"pallet-vesting/try-runtime",
]
