[package]
name = "neatcoin-runtime"
version = "1.3.1"
authors = ["Wei Tang <wei@that.world>"]
edition = "2018"
license = "GPL-3.0-or-later"

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.101", optional = true, features = ["derive"] }
scale-info = { version = "1.0", default-features = false, features = ["derive"] }
static_assertions = "1.1.0"
log = { version = "0.4.14", default-features = false }
smallvec = "1.6.1"

np-opaque = { default-features = false, path = "../../primitives/opaque" }

frame-system = { default-features = false, path = "../../substrate/frame/system" }
frame-system-rpc-runtime-api = { default-features = false, path = "../../substrate/frame/system/rpc/runtime-api" }
frame-executive = { default-features = false, path = "../../substrate/frame/executive" }
frame-support = { default-features = false, path = "../../substrate/frame/support" }
frame-election-provider-support = { default-features = false, path = "../../substrate/frame/election-provider-support" }

pallet-balances = { default-features = false, path = "../../substrate/frame/balances" }
pallet-grandpa = { default-features = false, path = "../../substrate/frame/grandpa" }
pallet-randomness-collective-flip = { default-features = false, path = "../../substrate/frame/randomness-collective-flip" }
pallet-timestamp = { default-features = false, path = "../../substrate/frame/timestamp" }
pallet-elections-phragmen = { default-features = false, path = "../../substrate/frame/elections-phragmen" }
pallet-transaction-payment = { default-features = false, path = "../../substrate/frame/transaction-payment" }
pallet-transaction-payment-rpc-runtime-api = { default-features = false, path = "../../substrate/frame/transaction-payment/rpc/runtime-api" }
pallet-collective = { default-features = false, path = "../../substrate/frame/collective" }
pallet-election-provider-multi-phase = { default-features = false, path = "../../substrate/frame/election-provider-multi-phase" }
pallet-staking = { default-features = false, path = "../../substrate/frame/staking" }
pallet-staking-reward-curve = { path = "../../substrate/frame/staking/reward-curve" }
pallet-babe = { default-features = false, path = "../../substrate/frame/babe" }
pallet-im-online = { default-features = false, path = "../../substrate/frame/im-online" }
pallet-multisig = { default-features = false, path = "../../substrate/frame/multisig" }
pallet-bounties = { default-features = false, path = "../../substrate/frame/bounties" }
pallet-proxy = { default-features = false, path = "../../substrate/frame/proxy" }
pallet-identity = { default-features = false, path = "../../substrate/frame/identity" }
pallet-tips = { default-features = false, path = "../../substrate/frame/tips" }
pallet-utility = { default-features = false, path = "../../substrate/frame/utility" }
pallet-vesting = { default-features = false, path = "../../substrate/frame/vesting" }
pallet-treasury = { default-features = false, path = "../../substrate/frame/treasury" }
pallet-membership = { default-features = false, path = "../../substrate/frame/membership" }
pallet-democracy = { default-features = false, path = "../../substrate/frame/democracy" }
pallet-offences = { default-features = false, path = "../../substrate/frame/offences" }
pallet-offences-benchmarking = { path = "../../substrate/frame/offences/benchmarking", default-features = false, optional = true }
pallet-session = { default-features = false, path = "../../substrate/frame/session" }
pallet-session-benchmarking = { path = "../../substrate/frame/session/benchmarking", default-features = false, optional = true }
pallet-indices = { default-features = false, path = "../../substrate/frame/indices" }
pallet-scheduler = { default-features = false, path = "../../substrate/frame/scheduler" }
pallet-authorship = { default-features = false, path = "../../substrate/frame/authorship" }
pallet-authority-discovery = { default-features = false, path = "../../substrate/frame/authority-discovery" }
pallet-contracts = { default-features = false, path = "../../substrate/frame/contracts" }
pallet-atomic-swap = { default-features = false, path = "../../substrate/frame/atomic-swap" }
pallet-contracts-rpc-runtime-api = { default-features = false, path = "../../substrate/frame/contracts/rpc/runtime-api" }
pallet-contracts-primitives = { default-features = false, path = "../../substrate/frame/contracts/common" }
pallet-eons = { path = "../../frame/eons", default-features = false }
pallet-variables = { path = "../../frame/variables", default-features = false }
pallet-registry = { path = "../../frame/registry", default-features = false }
pallet-zone = { path = "../../frame/zone", default-features = false }
pallet-fcfs = { path = "../../frame/fcfs", default-features = false }
pallet-bootstrap = { path = "../../frame/bootstrap", default-features = false }

sp-api = { default-features = false, path = "../../substrate/primitives/api" }
sp-io = { default-features = false, path = "../../substrate/primitives/io" }
sp-block-builder = { path = "../../substrate/primitives/block-builder", default-features = false }
sp-consensus-aura = { default-features = false, path = "../../substrate/primitives/consensus/aura" }
sp-core = { default-features = false, path = "../../substrate/primitives/core" }
sp-inherents = { path = "../../substrate/primitives/inherents", default-features = false }
sp-offchain = { default-features = false, path = "../../substrate/primitives/offchain" }
sp-runtime = { default-features = false, path = "../../substrate/primitives/runtime" }
sp-session = { default-features = false, path = "../../substrate/primitives/session" }
sp-std = { default-features = false, path = "../../substrate/primitives/std" }
sp-transaction-pool = { default-features = false, path = "../../substrate/primitives/transaction-pool" }
sp-version = { default-features = false, path = "../../substrate/primitives/version" }
sp-staking = { default-features = false, path = "../../substrate/primitives/staking" }
sp-authority-discovery = { default-features = false, path = "../../substrate/primitives/authority-discovery" }
sp-consensus-babe = { default-features = false, path = "../../substrate/primitives/consensus/babe" }
sp-npos-elections = { default-features = false, path = "../../substrate/primitives/npos-elections" }

# Used for runtime benchmarking
frame-benchmarking = { default-features = false, path = "../../substrate/frame/benchmarking", optional = true }
frame-system-benchmarking = { default-features = false, path = "../../substrate/frame/system/benchmarking", optional = true }
hex-literal = { version = "0.3.1", optional = true }

frame-try-runtime = { default-features = false, path = "../../substrate/frame/try-runtime", optional = true }

[build-dependencies]
substrate-wasm-builder = { path = "../../substrate/utils/wasm-builder" }

[features]
default = ["std"]
std = [
	"codec/std",
	"serde",
	"scale-info/std",
	"log/std",
	"np-opaque/std",
	"frame-system/std",
	"frame-system-rpc-runtime-api/std",
	"frame-executive/std",
	"frame-support/std",
	"frame-election-provider-support/std",
	"pallet-balances/std",
	"pallet-grandpa/std",
	"pallet-randomness-collective-flip/std",
	"pallet-timestamp/std",
	"pallet-elections-phragmen/std",
	"pallet-transaction-payment/std",
	"pallet-transaction-payment-rpc-runtime-api/std",
	"pallet-collective/std",
	"pallet-election-provider-multi-phase/std",
	"pallet-staking/std",
	"pallet-babe/std",
	"pallet-im-online/std",
	"pallet-multisig/std",
	"pallet-bounties/std",
	"pallet-proxy/std",
	"pallet-identity/std",
	"pallet-tips/std",
	"pallet-utility/std",
	"pallet-vesting/std",
	"pallet-treasury/std",
	"pallet-membership/std",
	"pallet-democracy/std",
	"pallet-offences/std",
	"pallet-session/std",
	"pallet-indices/std",
	"pallet-scheduler/std",
	"pallet-authorship/std",
	"pallet-authority-discovery/std",
	"pallet-contracts/std",
	"pallet-atomic-swap/std",
	"pallet-contracts-rpc-runtime-api/std",
	"pallet-contracts-primitives/std",
	"pallet-eons/std",
	"pallet-registry/std",
	"pallet-zone/std",
	"pallet-fcfs/std",
	"pallet-bootstrap/std",
	"sp-api/std",
	"sp-io/std",
	"sp-block-builder/std",
	"sp-consensus-aura/std",
	"sp-core/std",
	"sp-inherents/std",
	"sp-offchain/std",
	"sp-runtime/std",
	"sp-session/std",
	"sp-std/std",
	"sp-transaction-pool/std",
	"sp-version/std",
	"sp-staking/std",
	"sp-authority-discovery/std",
	"sp-consensus-babe/std",
	"sp-npos-elections/std",
	"frame-try-runtime/std",
]
runtime-benchmarks = [
	"frame-benchmarking",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"pallet-election-provider-multi-phase/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
	"pallet-babe/runtime-benchmarks",
	"pallet-balances/runtime-benchmarks",
	"pallet-bounties/runtime-benchmarks",
	"pallet-collective/runtime-benchmarks",
	"pallet-contracts/runtime-benchmarks",
	"pallet-democracy/runtime-benchmarks",
	"pallet-elections-phragmen/runtime-benchmarks",
	"pallet-grandpa/runtime-benchmarks",
	"pallet-identity/runtime-benchmarks",
	"pallet-im-online/runtime-benchmarks",
	"pallet-indices/runtime-benchmarks",
	"pallet-membership/runtime-benchmarks",
	"pallet-multisig/runtime-benchmarks",
	"pallet-proxy/runtime-benchmarks",
	"pallet-scheduler/runtime-benchmarks",
	"pallet-staking/runtime-benchmarks",
	"pallet-timestamp/runtime-benchmarks",
	"pallet-tips/runtime-benchmarks",
	"pallet-treasury/runtime-benchmarks",
	"pallet-utility/runtime-benchmarks",
	"pallet-vesting/runtime-benchmarks",
	"pallet-registry/runtime-benchmarks",
	"pallet-fcfs/runtime-benchmarks",
	"pallet-zone/runtime-benchmarks",
	"pallet-offences-benchmarking",
	"pallet-session-benchmarking",
	"frame-system-benchmarking",
	"hex-literal",
]
try-runtime = [
	"frame-executive/try-runtime",
	"frame-try-runtime",
	"frame-system/try-runtime",
	"pallet-authority-discovery/try-runtime",
	"pallet-authorship/try-runtime",
	"pallet-babe/try-runtime",
	"pallet-balances/try-runtime",
	"pallet-bounties/try-runtime",
	"pallet-collective/try-runtime",
	"pallet-contracts/try-runtime",
	"pallet-democracy/try-runtime",
	"pallet-elections-phragmen/try-runtime",
	"pallet-grandpa/try-runtime",
	"pallet-im-online/try-runtime",
	"pallet-indices/try-runtime",
	"pallet-membership/try-runtime",
	"pallet-multisig/try-runtime",
	"pallet-identity/try-runtime",
	"pallet-scheduler/try-runtime",
	"pallet-offences/try-runtime",
	"pallet-proxy/try-runtime",
	"pallet-randomness-collective-flip/try-runtime",
	"pallet-session/try-runtime",
	"pallet-staking/try-runtime",
	"pallet-election-provider-multi-phase/try-runtime",
	"pallet-timestamp/try-runtime",
	"pallet-tips/try-runtime",
	"pallet-transaction-payment/try-runtime",
	"pallet-treasury/try-runtime",
	"pallet-utility/try-runtime",
	"pallet-vesting/try-runtime",
]
